Refactor de Spring Data funcionando

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,6 +1,5 @@
-<footer th:frament="footer"
-        class="footer mt-auto py-3 bg-light"
-        xmlns:th="http://www.thymeleaf.org">
+<footer th:fragment="footer"
+        class="footer mt-auto py-3 bg-light">
     <div class="container">
         <span class="text-muted">IES ALIXAR. DAW2. Desarrollo Web en Entorno Servidor. Álvaro Segovia Mendoza</span>
     </div>
